Adjust line-height on nav items, prevent cutoff.

--- a/packages/global/scss/index.scss
+++ b/packages/global/scss/index.scss
@@ -155,7 +155,7 @@ $theme-site-navbar-secondary-font-size:     14px;
 $theme-site-navbar-secondary-font-size-sm:  12px;
 $theme-site-navbar-secondary-font-family:   $font-source-sans-pro;
 $theme-site-navbar-secondary-font-weight:   600;
-$theme-site-navbar-secondary-line-height:   1;
+$theme-site-navbar-secondary-line-height:   1.25;
 
 $theme-site-navbar-secondary-link-active-color:       $black;
 $theme-site-navbar-secondary-link-active-decoration:  none;
